--- a/src/main/webapp/cliente.xhtml
+++ b/src/main/webapp/cliente.xhtml
@@ -16,7 +16,7 @@
 	</h:head>
 	<h:body>
 		<h:form>
-			<h:inputText value="#{clienteController.nome}" /> :D kkkk
+			<h:inputText value="#{clienteController.nome}" /> 
         	 <h:commandButton actionListener="#{clienteController.salvar}"
 				value="Salvar" />
 		</h:form>
