--- a/src/main/webapp/cliente.xhtml
+++ b/src/main/webapp/cliente.xhtml
@@ -2,17 +2,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:pe="http://primefaces.org/ui/extensions"
-	xmlns:o="http://omnifaces.org/ui"
-	xmlns:sec="http://www.springframework.org/security/tags">
+	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view contentType="text/html">
 	<h:head>
 		<title>.:: Curso JSF com Spring ::.</title>
 		<meta content='text/html; charset=UTF-8' http-equiv="Content-Type" />
 		<link href="#{resource['images/favicon.ico']}" rel="shortcut icon" />
-		<h:outputStylesheet name="starter.css" />
+		<h:outputStylesheet name="#{resource[style.css]}" />
 	</h:head>
 	<h:body>
 		<h:form id="frmCliente">
